all get requests work except getmodelloc
