# python/xpctl/swagger_server/models/__init__.py
@@ -8,3 +8,4 @@ from swagger_server.models.error import Error
 from swagger_server.models.experiment import Experiment
 from swagger_server.models.experiment_aggregate import ExperimentAggregate
 from swagger_server.models.result import Result
+from swagger_server.models.task_summary import TaskSummary
